--- a/vm/Main.vm
+++ b/vm/Main.vm
@@ -1,6 +1,10 @@
 function Main.main 1
 call Pointer.new 0
 pop local 0
+push constant 0
+push constant 38
+call Output.moveCursor 2
+pop temp 0
 push local 0
 call Pointer.run 1
 pop temp 0
