--- a/vm/Tictac.vm
+++ b/vm/Tictac.vm
@@ -3,9 +3,6 @@ push constant 3
 call Memory.alloc 1
 pop pointer 0
 push constant 1
-call String.new 1
-push constant 88
-call String.appendChar 2
 pop static 0
 push constant 9
 call Array.new 1
@@ -24,10 +21,7 @@ if-goto WHILE_END0
 push local 0
 push this 2
 add
-push constant 1
-call String.new 1
-push constant 32
-call String.appendChar 2
+push constant 0
 pop temp 0
 pop pointer 1
 push temp 0
@@ -62,12 +56,19 @@ add
 pop local 0
 goto WHILE_EXP1
 label WHILE_END1
-push constant 1
-call String.new 1
-push constant 32
-call String.appendChar 2
+push constant 0
 pop this 1
 push pointer 0
+return
+function Tictac.GetGame 0
+push argument 0
+pop pointer 0
+push this 0
+return
+function Tictac.GetMainGame 0
+push argument 0
+pop pointer 0
+push this 2
 return
 function Tictac.CheckRows 1
 push argument 0
@@ -100,7 +101,6 @@ push argument 1
 add
 pop pointer 1
 push that 0
-and
 push local 0
 push constant 2
 add
@@ -109,9 +109,33 @@ add
 pop pointer 1
 push that 0
 eq
+and
+push local 0
+push argument 1
+add
+pop pointer 1
+push that 0
+push constant 0
+eq
+not
+and
 if-goto IF_TRUE0
 goto IF_FALSE0
 label IF_TRUE0
+push constant 5
+call String.new 1
+push constant 72
+call String.appendChar 2
+push constant 69
+call String.appendChar 2
+push constant 76
+call String.appendChar 2
+push constant 76
+call String.appendChar 2
+push constant 76
+call String.appendChar 2
+call Output.printString 1
+pop temp 0
 push constant 0
 not
 return
@@ -135,13 +159,6 @@ push constant 3
 lt
 not
 if-goto WHILE_END0
-push constant 40
-push constant 40
-call Output.moveCursor 2
-pop temp 0
-push local 0
-call Output.printInt 1
-pop temp 0
 push local 0
 push argument 1
 add
@@ -162,7 +179,6 @@ push argument 1
 add
 pop pointer 1
 push that 0
-and
 push local 0
 push constant 6
 add
@@ -171,6 +187,16 @@ add
 pop pointer 1
 push that 0
 eq
+and
+push local 0
+push argument 1
+add
+pop pointer 1
+push that 0
+push constant 0
+eq
+not
+and
 if-goto IF_TRUE0
 goto IF_FALSE0
 label IF_TRUE0
@@ -205,13 +231,22 @@ push argument 1
 add
 pop pointer 1
 push that 0
-and
 push constant 8
 push argument 1
 add
 pop pointer 1
 push that 0
 eq
+and
+push constant 0
+push argument 1
+add
+pop pointer 1
+push that 0
+push constant 0
+eq
+not
+and
 push constant 2
 push argument 1
 add
@@ -228,13 +263,22 @@ push argument 1
 add
 pop pointer 1
 push that 0
-and
 push constant 6
 push argument 1
 add
 pop pointer 1
 push that 0
 eq
+and
+push constant 2
+push argument 1
+add
+pop pointer 1
+push that 0
+push constant 0
+eq
+not
+and
 or
 if-goto IF_TRUE0
 goto IF_FALSE0
@@ -277,24 +321,15 @@ push argument 0
 pop pointer 0
 push static 0
 push constant 1
-call String.new 1
-push constant 88
-call String.appendChar 2
 eq
 if-goto IF_TRUE0
 goto IF_FALSE0
 label IF_TRUE0
-push constant 1
-call String.new 1
-push constant 79
-call String.appendChar 2
+push constant 2
 pop static 0
 goto IF_END0
 label IF_FALSE0
 push constant 1
-call String.new 1
-push constant 88
-call String.appendChar 2
 pop static 0
 label IF_END0
 push constant 0
@@ -321,10 +356,7 @@ push this 2
 add
 pop pointer 1
 push that 0
-push constant 1
-call String.new 1
-push constant 32
-call String.appendChar 2
+push constant 0
 eq
 if-goto IF_TRUE1
 goto IF_FALSE1
@@ -340,16 +372,29 @@ pop that 0
 label IF_FALSE1
 push pointer 0
 push this 2
-call Tictac.CheckWin 2
+call Tictac.CheckColumns 2
+push pointer 0
+push this 2
+call Tictac.CheckDiag 2
+or
+push pointer 0
+push this 2
+call Tictac.CheckRows 2
+or
 if-goto IF_TRUE2
 goto IF_FALSE2
 label IF_TRUE2
 push static 0
 pop this 1
 push constant 0
+not
 return
 label IF_FALSE2
 label IF_FALSE0
+push local 0
+push constant 1
+add
+pop local 0
 goto WHILE_EXP0
 label WHILE_END0
 push constant 0
@@ -371,33 +416,36 @@ pop local 0
 push argument 2
 push local 0
 add
-pop pointer 1
-push that 0
-push constant 1
-call String.new 1
-push constant 32
-call String.appendChar 2
-eq
-if-goto IF_TRUE0
-goto IF_FALSE0
-label IF_TRUE0
-push argument 2
-push local 0
-add
 push static 0
 pop temp 0
 pop pointer 1
 push temp 0
 pop that 0
-label IF_FALSE0
+push constant 0
+return
+function Tictac.CanPlaceHere 1
+push argument 0
+pop pointer 0
 push argument 1
 push this 0
 add
-push local 0
-pop temp 0
 pop pointer 1
-push temp 0
-pop that 0
+push that 0
+pop local 0
+push argument 2
+push local 0
+add
+pop pointer 1
+push that 0
+push constant 0
+eq
+if-goto IF_TRUE0
+goto IF_FALSE0
+label IF_TRUE0
+push constant 0
+not
+return
+label IF_FALSE0
 push constant 0
 return
 function Tictac.dispose 0
@@ -443,4 +491,9 @@ pop local 0
 goto WHILE_EXP0
 label WHILE_END0
 push local 2
+return
+function Tictac.getCurPlayer 0
+push argument 0
+pop pointer 0
+push static 0
 return
