--- a/vm/Animations.vm
+++ b/vm/Animations.vm
@@ -543,78 +543,48 @@ goto WHILE_EXP0
 label WHILE_END0
 push constant 0
 return
-function Animations.DrawY 1
+function Animations.DrawY 0
 push argument 0
 pop pointer 0
-push constant 0
-pop local 0
-label WHILE_EXP0
-push local 0
-push argument 3
-lt
-not
-if-goto WHILE_END0
-push local 0
+push argument 1
 push argument 3
 push constant 2
 call Math.divide 2
-lt
-if-goto IF_TRUE0
-goto IF_FALSE0
-label IF_TRUE0
-push argument 1
-push local 0
 add
 push argument 2
-push local 0
-add
-push argument 1
-push local 0
-add
-push constant 1
-add
-push argument 2
-push local 0
-add
 push argument 3
-push constant 8
+push constant 2
 call Math.divide 2
 add
-call Screen.drawRectangle 4
+push argument 3
+push constant 2
+call Math.divide 2
+call Screen.drawCircle 3
 pop temp 0
-label IF_FALSE0
+push constant 0
+call Screen.setColor 1
+pop temp 0
 push argument 1
 push argument 3
-add
-push local 0
-sub
-push constant 1
-sub
-push argument 2
-push local 0
-add
-push argument 1
-push argument 3
-add
-push local 0
-sub
-push constant 1
-add
-push argument 2
-push local 0
-add
-push argument 3
-push constant 8
+push constant 2
 call Math.divide 2
 add
-call Screen.drawRectangle 4
-pop temp 0
-push local 0
-push constant 1
+push argument 2
+push argument 3
+push constant 2
+call Math.divide 2
 add
-pop local 0
-goto WHILE_EXP0
-label WHILE_END0
+push constant 6
+push argument 3
+call Math.multiply 2
+push constant 16
+call Math.divide 2
+call Screen.drawCircle 3
+pop temp 0
+push constant 0
+not
+call Screen.setColor 1
+pop temp 0
 push constant 0
 return
 function Animations.PrintCurrentPlayer 0
@@ -750,6 +720,263 @@ pop temp 0
 push constant 0
 not
 call Screen.setColor 1
+pop temp 0
+push constant 0
+return
+function Animations.EraseScreen 0
+push argument 0
+pop pointer 0
+push constant 0
+call Screen.setColor 1
+pop temp 0
+push constant 0
+push constant 0
+push constant 500
+push constant 250
+call Screen.drawRectangle 4
+pop temp 0
+push constant 0
+not
+call Screen.setColor 1
+pop temp 0
+push constant 0
+return
+function Animations.DrawStart 0
+push argument 0
+pop pointer 0
+push pointer 0
+call Animations.EraseScreen 1
+pop temp 0
+push constant 1
+push constant 1
+call Output.moveCursor 2
+pop temp 0
+push constant 63
+call String.new 1
+push constant 84
+call String.appendChar 2
+push constant 104
+call String.appendChar 2
+push constant 101
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+push constant 84
+call String.appendChar 2
+push constant 105
+call String.appendChar 2
+push constant 99
+call String.appendChar 2
+push constant 45
+call String.appendChar 2
+push constant 84
+call String.appendChar 2
+push constant 97
+call String.appendChar 2
+push constant 99
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+push constant 103
+call String.appendChar 2
+push constant 97
+call String.appendChar 2
+push constant 109
+call String.appendChar 2
+push constant 101
+call String.appendChar 2
+push constant 44
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+push constant 109
+call String.appendChar 2
+push constant 97
+call String.appendChar 2
+push constant 100
+call String.appendChar 2
+push constant 101
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+push constant 105
+call String.appendChar 2
+push constant 110
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+push constant 110
+call String.appendChar 2
+push constant 97
+call String.appendChar 2
+push constant 110
+call String.appendChar 2
+push constant 100
+call String.appendChar 2
+push constant 50
+call String.appendChar 2
+push constant 116
+call String.appendChar 2
+push constant 101
+call String.appendChar 2
+push constant 116
+call String.appendChar 2
+push constant 114
+call String.appendChar 2
+push constant 105
+call String.appendChar 2
+push constant 115
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+push constant 99
+call String.appendChar 2
+push constant 111
+call String.appendChar 2
+push constant 117
+call String.appendChar 2
+push constant 114
+call String.appendChar 2
+push constant 115
+call String.appendChar 2
+push constant 101
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+push constant 119
+call String.appendChar 2
+push constant 105
+call String.appendChar 2
+push constant 116
+call String.appendChar 2
+push constant 104
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+push constant 106
+call String.appendChar 2
+push constant 97
+call String.appendChar 2
+push constant 99
+call String.appendChar 2
+push constant 107
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+push constant 108
+call String.appendChar 2
+push constant 97
+call String.appendChar 2
+push constant 110
+call String.appendChar 2
+push constant 103
+call String.appendChar 2
+push constant 117
+call String.appendChar 2
+push constant 97
+call String.appendChar 2
+push constant 103
+call String.appendChar 2
+push constant 101
+call String.appendChar 2
+call Output.printString 1
+pop temp 0
+push constant 3
+push constant 1
+call Output.moveCursor 2
+pop temp 0
+push constant 20
+call String.new 1
+push constant 84
+call String.appendChar 2
+push constant 111
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+push constant 115
+call String.appendChar 2
+push constant 116
+call String.appendChar 2
+push constant 97
+call String.appendChar 2
+push constant 114
+call String.appendChar 2
+push constant 116
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+push constant 112
+call String.appendChar 2
+push constant 114
+call String.appendChar 2
+push constant 101
+call String.appendChar 2
+push constant 115
+call String.appendChar 2
+push constant 115
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+push constant 115
+call String.appendChar 2
+push constant 112
+call String.appendChar 2
+push constant 97
+call String.appendChar 2
+push constant 99
+call String.appendChar 2
+push constant 101
+call String.appendChar 2
+call Output.printString 1
+pop temp 0
+push pointer 0
+push constant 130
+push constant 100
+push constant 130
+call Animations.DrawX 4
+pop temp 0
+push pointer 0
+push constant 230
+push constant 100
+push constant 150
+call Animations.DrawY 4
+pop temp 0
+push pointer 0
+push constant 270
+push constant 145
+push constant 70
+call Animations.DrawY 4
+pop temp 0
+push constant 0
+return
+function Animations.drawWinner 0
+push argument 0
+pop pointer 0
+push constant 2
+push constant 50
+call Output.moveCursor 2
+pop temp 0
+push constant 9
+call String.new 1
+push constant 60
+call String.appendChar 2
+push constant 45
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+push constant 87
+call String.appendChar 2
+push constant 73
+call String.appendChar 2
+push constant 78
+call String.appendChar 2
+push constant 78
+call String.appendChar 2
+push constant 69
+call String.appendChar 2
+push constant 82
+call String.appendChar 2
+call Output.printString 1
 pop temp 0
 push constant 0
 return
