--- a/vm/Pointer.vm
+++ b/vm/Pointer.vm
@@ -96,6 +96,9 @@ goto WHILE_EXP2
 label WHILE_END2
 goto WHILE_EXP0
 label WHILE_END0
+push this 8
+call Animations.drawWinner 1
+pop temp 0
 push constant 0
 return
 function Pointer.movePointer 0
@@ -147,6 +150,78 @@ eq
 if-goto IF_TRUE4
 goto IF_FALSE4
 label IF_TRUE4
+push pointer 0
+call Pointer.Enter 1
+pop temp 0
+label IF_FALSE4
+push this 2
+push constant 87
+eq
+if-goto IF_TRUE5
+goto IF_FALSE5
+label IF_TRUE5
+push this 0
+call Point.moveUp 1
+pop temp 0
+label IF_FALSE5
+push this 2
+push constant 83
+eq
+if-goto IF_TRUE6
+goto IF_FALSE6
+label IF_TRUE6
+push this 0
+call Point.moveDown 1
+pop temp 0
+label IF_FALSE6
+push this 2
+push constant 65
+eq
+if-goto IF_TRUE7
+goto IF_FALSE7
+label IF_TRUE7
+push this 0
+call Point.moveLeft 1
+pop temp 0
+label IF_FALSE7
+push this 2
+push constant 68
+eq
+if-goto IF_TRUE8
+goto IF_FALSE8
+label IF_TRUE8
+push this 0
+call Point.moveRight 1
+pop temp 0
+label IF_FALSE8
+push this 2
+push constant 82
+eq
+if-goto IF_TRUE9
+goto IF_FALSE9
+label IF_TRUE9
+push this 0
+call Point.GoToNewSystem 1
+pop temp 0
+label IF_FALSE9
+push this 2
+push constant 32
+eq
+if-goto IF_TRUE10
+goto IF_FALSE10
+label IF_TRUE10
+push pointer 0
+call Pointer.Enter 1
+pop temp 0
+label IF_FALSE10
+push constant 110
+call Sys.wait 1
+pop temp 0
+push constant 0
+return
+function Pointer.Enter 0
+push argument 0
+pop pointer 0
 push this 0
 call Point.GetX 1
 push constant 244
@@ -159,9 +234,9 @@ and
 push this 0
 call Point.CanPlace 1
 and
-if-goto IF_TRUE5
-goto IF_FALSE5
-label IF_TRUE5
+if-goto IF_TRUE0
+goto IF_FALSE0
+label IF_TRUE0
 push pointer 0
 call Pointer.GetField 1
 pop this 4
@@ -181,9 +256,9 @@ push this 3
 push this 4
 push this 7
 call Tictac.CanPlaceHere 3
-if-goto IF_TRUE6
-goto IF_FALSE6
-label IF_TRUE6
+if-goto IF_TRUE1
+goto IF_FALSE1
+label IF_TRUE1
 push this 0
 call Point.Refresh 1
 pop temp 0
@@ -203,35 +278,21 @@ call Point.Place 3
 pop temp 0
 push this 3
 call Tictac.checkEndGame 1
-if-goto IF_TRUE7
-goto IF_FALSE7
-label IF_TRUE7
+if-goto IF_TRUE2
+goto IF_FALSE2
+label IF_TRUE2
 push this 3
 call Tictac.GetWinner 1
 pop this 10
 push constant 0
 not
 pop this 9
-label IF_FALSE7
+label IF_FALSE2
 push this 3
 call Tictac.ChangePlayer 1
 pop temp 0
-label IF_FALSE6
-label IF_FALSE5
-label IF_FALSE4
-push this 2
-push constant 82
-eq
-if-goto IF_TRUE8
-goto IF_FALSE8
-label IF_TRUE8
-push this 0
-call Point.GoToNewSystem 1
-pop temp 0
-label IF_FALSE8
-push constant 110
-call Sys.wait 1
-pop temp 0
+label IF_FALSE1
+label IF_FALSE0
 push constant 0
 return
 function Pointer.updateX 1
