--- a/vm/Main.vm
+++ b/vm/Main.vm
@@ -5,6 +5,9 @@ push local 1
 push constant 1
 call waiting.wait 2
 pop temp 0
+push constant 100
+call Sys.wait 1
+pop temp 0
 call Pointer.new 0
 pop local 0
 push constant 0
